# dream-heatmap

./: .gitignore  README.md  launch_dashboard.py  launch_dashboard_20k.py  pyproject.toml
data/: generate_tme_data.py
notebooks/: playground.ipynb  tumor_microenvironment.ipynb
src/dream_heatmap/: __init__.py  api.py  display_utils.py
src/dream_heatmap/annotation/: __init__.py  base.py  categorical.py  label.py  minigraph.py
src/dream_heatmap/concat/: __init__.py  composite_id_mapper.py  composite_layout.py  heatmap_list.py
src/dream_heatmap/core/: color_scale.py  id_mapper.py  matrix.py  metadata.py  validation.py
src/dream_heatmap/dashboard/: __init__.py  app.py  chart_panel.py  code_export.py  heatmap_pane.py  plotly_charts.py  sidebar.py  state.py
src/dream_heatmap/export/: __init__.py  html_export.py
src/dream_heatmap/export/templates/: standalone.html.j2
src/dream_heatmap/js/: index.js
src/dream_heatmap/layout/: annotation_layout.py  cell_layout.py  composer.py  dendrogram_layout.py  geometry.py  label_layout.py
src/dream_heatmap/transform/: cluster.py  pipeline.py  reorder.py  scaler.py  splitter.py
src/dream_heatmap/widget/: heatmap_widget.py  selection.py  serializers.py
tests/: conftest.py  test_annotation.py  test_cluster.py  test_color_scale.py  test_concat.py  test_html_export.py  test_id_mapper.py  test_integration.py  test_layout.py  test_legend.py  test_matrix.py  test_metadata.py  test_reorder.py  test_scaler.py  test_selection_roundtrip.py  test_splitter.py  test_widget_serialization.py  test_zoom.py
(+16 files in other folders)
