[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dream-heatmap"
dynamic = ["version"]
description = "Interactive, table-driven heatmaps that solve the ruler problem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Roni Falk" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "jinja2>=3.1",
    "matplotlib>=3.6",
    "panel>=1.4",
    "plotly>=5.0",
    "param>=2.0",
]

[project.optional-dependencies]
jupyter = [
    "anywidget>=0.9",
    "ipywidgets>=8.0",
]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[tool.hatch.version]
path = "src/dream_heatmap/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dream_heatmap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
